# magang1

./: .gitignore  CMakeLists.txt  readme.md
include/: Temperature.h  Time.h
include/nlohmann/: json.hpp
src/: Json.Handler.cpp  Length.cpp  Temperature.cpp  Time.cpp
